Editing scraper to only save last 10,000 steps of the walkers. Ask BJ.

--- a/Notebook_Statistics.ipynb
+++ b/Notebook_Statistics.ipynb
@@ -4653,8 +4653,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "planets_big_all   = masses_planet.query('mass > 0.1')\n",
+    "planets_small_all = masses_planet.query('mass <= 0.1')\n",
+    "\n",
+    "names_big_all = np.unique(planets_big_all.hostname)\n",
+    "nplanets_big_all = np.array(planets_big_all.groupby('hostname').count()['status'])\n",
+    "db_nplanets_big_all = pd.DataFrame({'hostname':names_big_all, 'nplanets':nplanets_big_all})\n",
+    "\n",
+    "names_small_all = np.unique(planets_small_all.hostname)\n",
+    "nplanets_small_all = np.array(planets_small_all.groupby('hostname').count()['status'])\n",
+    "db_nplanets_small_all = pd.DataFrame({'hostname':names_small_all, 'nplanets':nplanets_small_all})\n",
+    "\n",
+    "# Do same nplanets thingy for all planets, no mass cuts.\n",
+    "names_all = np.unique(masses_planet.hostname)\n",
+    "nplanets_all = np.array(masses_planet.groupby('hostname').count()['status'])\n",
+    "db_nplanets_all = pd.DataFrame({'hostname':names_all, 'nplanets':nplanets_all})\n",
+    "\n",
+    "planets_all       = pd.merge(masses_planet, db_nplanets_all, on='hostname').reset_index()\n",
+    "planets_big_all   = pd.merge(planets_big_all, db_nplanets_big_all, on='hostname').reset_index()\n",
+    "planets_small_all = pd.merge(planets_small_all, db_nplanets_small_all, on='hostname').reset_index()\n",
+    "\n",
+    "db_nplanets_all       = None\n",
+    "db_nplanets_big_all   = None\n",
+    "db_nplanets_small_all = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planets_big_multi_all = planets_big_all.query('nplanets > 1')\n",
+    "planets_multi_all     = planets_all.query('nplanets > 1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4677,7 +4720,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>level_0</th>\n",
        "      <th>index</th>\n",
        "      <th>Unnamed: 0</th>\n",
        "      <th>hostname</th>\n",
@@ -4687,6 +4729,7 @@
        "      <th>mass_minus</th>\n",
        "      <th>mass_plus</th>\n",
        "      <th>axis</th>\n",
+       "      <th>axis_med</th>\n",
        "      <th>...</th>\n",
        "      <th>per_plus</th>\n",
        "      <th>k</th>\n",
@@ -4701,26 +4744,400 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>145675</td>\n",
+       "      <td>K</td>\n",
+       "      <td>4.910311</td>\n",
+       "      <td>4.930009</td>\n",
+       "      <td>4.787921</td>\n",
+       "      <td>5.071054</td>\n",
+       "      <td>2.857071</td>\n",
+       "      <td>2.856997</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1766.992785</td>\n",
+       "      <td>88.895147</td>\n",
+       "      <td>89.199999</td>\n",
+       "      <td>88.713736</td>\n",
+       "      <td>89.786000</td>\n",
+       "      <td>0.366352</td>\n",
+       "      <td>0.366356</td>\n",
+       "      <td>0.362869</td>\n",
+       "      <td>0.369773</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>145675</td>\n",
+       "      <td>C</td>\n",
+       "      <td>5.930104</td>\n",
+       "      <td>6.186677</td>\n",
+       "      <td>5.341438</td>\n",
+       "      <td>7.168676</td>\n",
+       "      <td>15.947416</td>\n",
+       "      <td>17.505125</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40530.007386</td>\n",
+       "      <td>46.782006</td>\n",
+       "      <td>47.576763</td>\n",
+       "      <td>43.540532</td>\n",
+       "      <td>52.143361</td>\n",
+       "      <td>0.427951</td>\n",
+       "      <td>0.465702</td>\n",
+       "      <td>0.362407</td>\n",
+       "      <td>0.574290</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1461</td>\n",
+       "      <td>K</td>\n",
+       "      <td>0.020355</td>\n",
+       "      <td>0.020306</td>\n",
+       "      <td>0.017841</td>\n",
+       "      <td>0.022745</td>\n",
+       "      <td>0.064313</td>\n",
+       "      <td>0.064308</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.771590</td>\n",
+       "      <td>2.259221</td>\n",
+       "      <td>2.236886</td>\n",
+       "      <td>1.980627</td>\n",
+       "      <td>2.488020</td>\n",
+       "      <td>0.205714</td>\n",
+       "      <td>0.106661</td>\n",
+       "      <td>0.032319</td>\n",
+       "      <td>0.222443</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1461</td>\n",
+       "      <td>K</td>\n",
+       "      <td>0.026585</td>\n",
+       "      <td>0.025502</td>\n",
+       "      <td>0.022323</td>\n",
+       "      <td>0.028718</td>\n",
+       "      <td>0.113359</td>\n",
+       "      <td>0.113344</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.506274</td>\n",
+       "      <td>2.198567</td>\n",
+       "      <td>2.115421</td>\n",
+       "      <td>1.862548</td>\n",
+       "      <td>2.363000</td>\n",
+       "      <td>0.146231</td>\n",
+       "      <td>0.099673</td>\n",
+       "      <td>0.029296</td>\n",
+       "      <td>0.208099</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>155358</td>\n",
+       "      <td>K</td>\n",
+       "      <td>0.813886</td>\n",
+       "      <td>0.865033</td>\n",
+       "      <td>0.798673</td>\n",
+       "      <td>0.960423</td>\n",
+       "      <td>0.610034</td>\n",
+       "      <td>0.610154</td>\n",
+       "      <td>...</td>\n",
+       "      <td>194.665990</td>\n",
+       "      <td>34.060234</td>\n",
+       "      <td>36.085216</td>\n",
+       "      <td>33.509826</td>\n",
+       "      <td>39.798742</td>\n",
+       "      <td>0.234480</td>\n",
+       "      <td>0.220992</td>\n",
+       "      <td>0.200525</td>\n",
+       "      <td>0.241666</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>171</td>\n",
+       "      <td>296</td>\n",
+       "      <td>37124</td>\n",
+       "      <td>K</td>\n",
+       "      <td>0.637897</td>\n",
+       "      <td>0.640130</td>\n",
+       "      <td>0.619796</td>\n",
+       "      <td>0.660753</td>\n",
+       "      <td>0.518332</td>\n",
+       "      <td>0.518312</td>\n",
+       "      <td>...</td>\n",
+       "      <td>154.284286</td>\n",
+       "      <td>28.561279</td>\n",
+       "      <td>28.665014</td>\n",
+       "      <td>28.053847</td>\n",
+       "      <td>29.291120</td>\n",
+       "      <td>0.059637</td>\n",
+       "      <td>0.056707</td>\n",
+       "      <td>0.035441</td>\n",
+       "      <td>0.077248</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>172</td>\n",
+       "      <td>297</td>\n",
+       "      <td>37124</td>\n",
+       "      <td>K</td>\n",
+       "      <td>0.649051</td>\n",
+       "      <td>0.619548</td>\n",
+       "      <td>0.530565</td>\n",
+       "      <td>0.702714</td>\n",
+       "      <td>1.664450</td>\n",
+       "      <td>1.664722</td>\n",
+       "      <td>...</td>\n",
+       "      <td>890.370274</td>\n",
+       "      <td>16.308536</td>\n",
+       "      <td>15.600438</td>\n",
+       "      <td>13.407645</td>\n",
+       "      <td>17.579617</td>\n",
+       "      <td>0.121206</td>\n",
+       "      <td>0.115839</td>\n",
+       "      <td>0.066544</td>\n",
+       "      <td>0.167875</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>173</td>\n",
+       "      <td>298</td>\n",
+       "      <td>37124</td>\n",
+       "      <td>K</td>\n",
+       "      <td>0.634029</td>\n",
+       "      <td>0.636568</td>\n",
+       "      <td>0.599151</td>\n",
+       "      <td>0.675442</td>\n",
+       "      <td>2.630263</td>\n",
+       "      <td>2.631182</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1778.509984</td>\n",
+       "      <td>12.580575</td>\n",
+       "      <td>12.886264</td>\n",
+       "      <td>12.118451</td>\n",
+       "      <td>13.730575</td>\n",
+       "      <td>0.012403</td>\n",
+       "      <td>0.165263</td>\n",
+       "      <td>0.053224</td>\n",
+       "      <td>0.289636</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>174</td>\n",
+       "      <td>300</td>\n",
+       "      <td>68988</td>\n",
+       "      <td>K</td>\n",
+       "      <td>1.969198</td>\n",
+       "      <td>1.970428</td>\n",
+       "      <td>1.885562</td>\n",
+       "      <td>2.053510</td>\n",
+       "      <td>0.071213</td>\n",
+       "      <td>0.071212</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.276428</td>\n",
+       "      <td>192.104859</td>\n",
+       "      <td>192.214938</td>\n",
+       "      <td>191.571474</td>\n",
+       "      <td>192.855609</td>\n",
+       "      <td>0.157166</td>\n",
+       "      <td>0.156755</td>\n",
+       "      <td>0.153332</td>\n",
+       "      <td>0.160005</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>175</td>\n",
+       "      <td>301</td>\n",
+       "      <td>68988</td>\n",
+       "      <td>K</td>\n",
+       "      <td>16.389258</td>\n",
+       "      <td>17.617583</td>\n",
+       "      <td>15.124601</td>\n",
+       "      <td>19.992019</td>\n",
+       "      <td>14.353306</td>\n",
+       "      <td>16.508762</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32532.222445</td>\n",
+       "      <td>126.453866</td>\n",
+       "      <td>132.159067</td>\n",
+       "      <td>120.845171</td>\n",
+       "      <td>141.813569</td>\n",
+       "      <td>0.475855</td>\n",
+       "      <td>0.533665</td>\n",
+       "      <td>0.424231</td>\n",
+       "      <td>0.623832</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 26 columns</p>\n",
+       "<p>105 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [level_0, index, Unnamed: 0, hostname, status, mass, mass_med, mass_minus, mass_plus, axis, axis_med, axis_minus, axis_plus, per, per_med, per_minus, per_plus, k, k_med, k_minus, k_plus, e, e_med, e_minus, e_plus, nplanets]\n",
-       "Index: []\n",
+       "     index  Unnamed: 0 hostname status       mass   mass_med  mass_minus  \\\n",
+       "0        0           0   145675      K   4.910311   4.930009    4.787921   \n",
+       "1        1           1   145675      C   5.930104   6.186677    5.341438   \n",
+       "2        2           3     1461      K   0.020355   0.020306    0.017841   \n",
+       "3        3           4     1461      K   0.026585   0.025502    0.022323   \n",
+       "4        4           7   155358      K   0.813886   0.865033    0.798673   \n",
+       "..     ...         ...      ...    ...        ...        ...         ...   \n",
+       "171    171         296    37124      K   0.637897   0.640130    0.619796   \n",
+       "172    172         297    37124      K   0.649051   0.619548    0.530565   \n",
+       "173    173         298    37124      K   0.634029   0.636568    0.599151   \n",
+       "174    174         300    68988      K   1.969198   1.970428    1.885562   \n",
+       "175    175         301    68988      K  16.389258  17.617583   15.124601   \n",
        "\n",
-       "[0 rows x 26 columns]"
+       "     mass_plus       axis   axis_med  ...      per_plus           k  \\\n",
+       "0     5.071054   2.857071   2.856997  ...   1766.992785   88.895147   \n",
+       "1     7.168676  15.947416  17.505125  ...  40530.007386   46.782006   \n",
+       "2     0.022745   0.064313   0.064308  ...      5.771590    2.259221   \n",
+       "3     0.028718   0.113359   0.113344  ...     13.506274    2.198567   \n",
+       "4     0.960423   0.610034   0.610154  ...    194.665990   34.060234   \n",
+       "..         ...        ...        ...  ...           ...         ...   \n",
+       "171   0.660753   0.518332   0.518312  ...    154.284286   28.561279   \n",
+       "172   0.702714   1.664450   1.664722  ...    890.370274   16.308536   \n",
+       "173   0.675442   2.630263   2.631182  ...   1778.509984   12.580575   \n",
+       "174   2.053510   0.071213   0.071212  ...      6.276428  192.104859   \n",
+       "175  19.992019  14.353306  16.508762  ...  32532.222445  126.453866   \n",
+       "\n",
+       "          k_med     k_minus      k_plus         e     e_med   e_minus  \\\n",
+       "0     89.199999   88.713736   89.786000  0.366352  0.366356  0.362869   \n",
+       "1     47.576763   43.540532   52.143361  0.427951  0.465702  0.362407   \n",
+       "2      2.236886    1.980627    2.488020  0.205714  0.106661  0.032319   \n",
+       "3      2.115421    1.862548    2.363000  0.146231  0.099673  0.029296   \n",
+       "4     36.085216   33.509826   39.798742  0.234480  0.220992  0.200525   \n",
+       "..          ...         ...         ...       ...       ...       ...   \n",
+       "171   28.665014   28.053847   29.291120  0.059637  0.056707  0.035441   \n",
+       "172   15.600438   13.407645   17.579617  0.121206  0.115839  0.066544   \n",
+       "173   12.886264   12.118451   13.730575  0.012403  0.165263  0.053224   \n",
+       "174  192.214938  191.571474  192.855609  0.157166  0.156755  0.153332   \n",
+       "175  132.159067  120.845171  141.813569  0.475855  0.533665  0.424231   \n",
+       "\n",
+       "       e_plus  nplanets  \n",
+       "0    0.369773         2  \n",
+       "1    0.574290         2  \n",
+       "2    0.222443         2  \n",
+       "3    0.208099         2  \n",
+       "4    0.241666         2  \n",
+       "..        ...       ...  \n",
+       "171  0.077248         3  \n",
+       "172  0.167875         3  \n",
+       "173  0.289636         3  \n",
+       "174  0.160005         2  \n",
+       "175  0.623832         2  \n",
+       "\n",
+       "[105 rows x 25 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "planets_big_single.query('axis < 0.1')"
+    "planets_multi_all#.query('axis < 0.1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Follow resonant identification recipe.\n",
+    "def dispersion(mass_db):\n",
+    "    hostnames = np.unique(mass_db.hostname)\n",
+    "    \n",
+    "    disp_array = []\n",
+    "    for name in hostnames:\n",
+    "        system = mass_db.query('hostname == \"{}\"'.format(name)).sort_values(by='mass')    \n",
+    "        nps = len(system)\n",
+    "        if nps > 1:\n",
+    "            mass_av = np.mean(system.mass)\n",
+    "            disp_sys = np.sqrt(np.sum((system.mass - mass_av)**2) / (nps - 1))\n",
+    "            disp_array.append(disp_sys)\n",
+    "        \n",
+    "    return np.mean(disp_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6991663494845828"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dispersion(planets_big_multi_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2358802304632246"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dispersion(planets_multi_all)"
    ]
   },
   {
