Removing 75732 from keplerian setup file list. USP just will not behave.d

--- a/Notebook_Joker.ipynb
+++ b/Notebook_Joker.ipynb
@@ -397,16 +397,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7970.321912359912 d\n"
+     ]
+    }
+   ],
    "source": [
     "with pm.Model():\n",
     "    dv0_1 = xu.with_unit(pm.Normal('dv0_1', 0, 5.), u.m/u.s)\n",
     "    s = xu.with_unit(pm.Lognormal('s', 0, 0.5), u.m/u.s)\n",
     "    baseline = np.amax(time_j) - np.amin(time_k)\n",
-    "    params = tj.JokerPrior.default(P_min=baseline, P_max=8*baseline, s=s,\n",
-    "                                   v0_offsets=[dv0_1], sigma_K0=1*u.km/u.s, sigma_v = 10*u.km/u.s)"
+    "    params = tj.JokerPrior.default(P_min=baseline, P_max=10*baseline, s=s,\n",
+    "                                   v0_offsets=[dv0_1], sigma_K0=1*u.km/u.s, sigma_v = 10*u.km/u.s)\n",
+    "print(baseline)"
    ]
   },
   {
@@ -428,7 +437,7 @@
     " \n",
     "prior_cache_file = 'prior_samples.hdf5'\n",
     "if not os.path.exists(prior_cache_file):\n",
-    "    prior_samples = params.sample(2*10**8)\n",
+    "    prior_samples = params.sample(5*10**8)\n",
     "    prior_samples.write(prior_cache_file)\n",
     "\n",
     "with schwimmbad.SerialPool() as pool:\n",
