Trying to fix empty stellar mass chain bug.

--- a/legacy_tables/Stellar_legacy_selection.ipynb
+++ b/legacy_tables/Stellar_legacy_selection.ipynb
@@ -990,30 +990,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>obs</th>\n",
+       "      <th>name</th>\n",
+       "      <th>teff</th>\n",
+       "      <th>teff_err</th>\n",
+       "      <th>logg</th>\n",
+       "      <th>logg_err</th>\n",
+       "      <th>fe</th>\n",
+       "      <th>fe_err</th>\n",
+       "      <th>vsini</th>\n",
+       "      <th>iso_mass</th>\n",
+       "      <th>...</th>\n",
+       "      <th>iso_parallax</th>\n",
+       "      <th>iso_parallax_err1</th>\n",
+       "      <th>iso_parallax_err2</th>\n",
+       "      <th>obs_emp</th>\n",
+       "      <th>teff_emp</th>\n",
+       "      <th>teff_err_emp</th>\n",
+       "      <th>radius_emp</th>\n",
+       "      <th>radius_err_emp</th>\n",
+       "      <th>fe_emp</th>\n",
+       "      <th>fe_err_emp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1051</th>\n",
+       "      <td>rj55.1183</td>\n",
+       "      <td>hip63510</td>\n",
+       "      <td>4391.538196</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>4.101417</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>-0.581488</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>13.27515</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>rj55.1183</td>\n",
+       "      <td>3740.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>0.557</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 39 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['obs', 'name', 'teff', 'teff_err', 'logg', 'logg_err', 'fe', 'fe_err',\n",
-       "       'vsini', 'iso_mass', 'iso_mass_err1', 'iso_mass_err2', 'iso_radius',\n",
-       "       'iso_radius_err1', 'iso_radius_err2', 'iso_logage', 'iso_logage_err1',\n",
-       "       'iso_logage_err2', 'iso_age_err1', 'iso_age_err2', 'iso_teff',\n",
-       "       'iso_teff_err1', 'iso_teff_err2', 'iso_logg', 'iso_logg_err1',\n",
-       "       'iso_logg_err2', 'iso_fe', 'iso_fe_err1', 'iso_fe_err2', 'iso_parallax',\n",
-       "       'iso_parallax_err1', 'iso_parallax_err2', 'obs_emp', 'teff_emp',\n",
-       "       'teff_err_emp', 'radius_emp', 'radius_err_emp', 'fe_emp', 'fe_err_emp'],\n",
-       "      dtype='object')"
+       "            obs      name         teff  teff_err      logg  logg_err  \\\n",
+       "1051  rj55.1183  hip63510  4391.538196     100.0  4.101417       0.1   \n",
+       "\n",
+       "            fe  fe_err     vsini  iso_mass  ...  iso_parallax  \\\n",
+       "1051 -0.581488    0.06  13.27515       NaN  ...           NaN   \n",
+       "\n",
+       "      iso_parallax_err1  iso_parallax_err2    obs_emp  teff_emp  teff_err_emp  \\\n",
+       "1051                NaN                NaN  rj55.1183    3740.0          70.0   \n",
+       "\n",
+       "      radius_emp  radius_err_emp  fe_emp  fe_err_emp  \n",
+       "1051       0.557             0.1    0.22        0.09  \n",
+       "\n",
+       "[1 rows x 39 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merge.columns"
+    "merge.query('name == \"hip63510\"')"
    ]
   },
   {
