Fidgeting with it some more.

--- a/legacy_tables/Stellar_legacy_selection.ipynb
+++ b/legacy_tables/Stellar_legacy_selection.ipynb
@@ -971,14 +971,18 @@
     "smemp = specmatch_emp.copy()\n",
     "\n",
     "# As of 7/29, add four dummy rows, for the four stars that don't have emp results.\n",
+    "smemp.loc[smemp.shape[0]] = ['rj55.1183', 'hip63510', 5700, 100, 1, 0.05, 0, 0.05]\n",
     "smemp.loc[smemp.shape[0]] = ['rj169.108', '134439', 5700, 100, 1, 0.05, 0, 0.05]\n",
     "smemp.loc[smemp.shape[0]] = ['rj169.109', '134440', 5700, 100, 1, 0.05, 0, 0.05]\n",
-    "smemp.loc[smemp.shape[0]] = ['rdummydum', '168723', 5700, 100, 1, 0.05, 0, 0.05]\n",
     "smemp.loc[smemp.shape[0]] = ['rj238.334', 'hip106924', 5700, 100, 1, 0.05, 0, 0.05]\n",
-    "# 168723 is also missing Syn results, since it doesn't have a Keck template.\n",
+    "smemp.loc[smemp.shape[0]] = ['rdummydum', '168723', 5700, 100, 1, 0.05, 0, 0.05]\n",
+    "\n",
+    "# Do the same for synthetic results/\n",
     "#smsyn.loc[smsyn.shape[0]] = ['rdummydum', '168723', 5700, 100, 1, 0.05, 0, 0.05, 1, 0.1,\n",
     "#                             1, 0.05, 0.05, 1, 0.05, 0.05, 0, 0.05, 0.05, 1,\n",
     "#                             0.05, 0.05, 5700, 100, 100, 0, 0.05, 0.05, 0, 0.05, 0.05]\n",
+    "#smemp.loc[smemp.shape[0]] = ['rj222.304', 'hip63510', 5700, 100, 1, 0.05, 0, 0.05]\n",
+    "\n",
     "\n",
     "smemp.columns = smemp.columns.map(lambda x: str(x) + '_emp')\n",
     "\n",
